[workspace]
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["Anuradha Wickramarachchi anuradhawick@gmail.com", "Vijini Mallawaarachchi viji.mallawaarachchi@gmail.com"]
package.description = "kmertools is a k-mer based feature extraction tool designed to support metagenomics and other bioinformatics analytics."

members = ["composition", "coverage", "kmertools", "kmer", "ktio", "counter", "misc", "pykt"]
resolver = "2"
