[workspace]
package.version = "0.1.1"
package.edition = "2021"
package.authors = ["Anuradha Wickramarachchi <anuradhawick@gmail.com>", "Vijini Mallawaarachchi <viji.mallawaarachchi@gmail.com>"]
package.description = "kmertools is a k-mer based feature extraction tool designed to support metagenomics and other bioinformatics analytics."
package.readme = "README.md"
package.license-file = "LICENSE"

members = ["composition", "coverage", "kmertools", "kmer", "ktio", "counter", "misc", "pykmertools"]
resolver = "2"
