[package]
name = "composition"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
kmer = { path = "../kmer" }
ktio = { path = "../ktio" }
memmap2 = "0.9.4"
rayon = "1.10.0"

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
