[package]
name = "counter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
kmer = { path = "../kmer" }
ktio = { path = "../ktio" }
rayon = "1.10.0"
scc = "2.1.0"

[lib]
doctest = false
