[package]
name = "kmertools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
composition = { path = "../composition" }
coverage = { path = "../coverage" }
counter = { path = "../counter" }
misc = { path = "../misc" }
ktio = { path = "../ktio" }
