[package]
name = "misc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kmer = { path = "../kmer" }
ktio = { path = "../ktio" }
indicatif = "0.18.0"
rayon = "1.10.0"
scc = "3.0.7"

[lib]
doctest = false
