[package]
name = "pybindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybindings"
test = false
doctest = false

[dependencies]
pyo3 = { version = "0.23.3", "features" = ["abi3-py39"] }
rayon = "1.10.0"
clap = { version = "4.5.4" }
composition = { path = "../composition" }
kmer = { path = "../kmer" }
