[package]
name = "pykmertools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pykmertools"
crate-type = ["cdylib"]
test = false

[dependencies]
pyo3 = "0.22.0"
rayon = "1.10.0"
composition = { path = "../composition" }
kmer = { path = "../kmer" }
