[package]
name = "pykmertools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pykmertools"
crate-type = ["cdylib"]
test = false

[dependencies]
pyo3 = { version = "0.22.0", "features" = ["abi3-py39"] }
rayon = "1.10.0"
clap = { version = "4.5.4" }
composition = { path = "../composition" }
kmer = { path = "../kmer" }
kmertools = { path = "../kmertools" }

[features]
cli = []
