[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pykmertools"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "description", "license", "readme"]
keywords = ["genomics", "bioinformatics"]


[project.urls]
Documentation = "https://github.com/anuradhawick/kmertools/wiki"
"Bug Tracker" = "https://github.com/anuradhawick/kmertools/issues"
"Source Code" = "https://github.com/anuradhawick/kmertools/"

[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
kmertools = "pykmertools:run_cli"
