[package]
name = "pykt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kmertools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
rayon = "1.10.0"
composition = { path = "../composition" }
kmer = { path = "../kmer" }
